# qpidbm

./: .astylerc  CMakeLists.txt  README.md  config.h.in  pidbm-qtcreator.pro  pidbm.project  pidbm.workspace  qpidbm.project  qpidbm.qrc  qpidbm.workspace
lib/: CMakeLists.txt  arch.h  boardfamily.cpp  boardfamily.h  boardfolder.h  boardmodel.cpp  boardmodel.h  boardvariant.cpp  boardvariant.h  connector.cpp  connector.h  connectorfamily.cpp  connectorfamily.h  database.h  folder.cpp  folder.h  folder_p.h  function.h  gpio.cpp  gpio.h  gpioconnector.cpp  gpioconnector.h  manufacturer.cpp  manufacturer.h  node.cpp  node.h  node_p.h  pin.h  property.cpp  property.h  property_p.h  record.cpp  record.h  record_p.h  soc.cpp  soc.h  socfamily.cpp  socfamily.h  treemodel.cpp  treemodel.h
main/: CMakeLists.txt  actionbutton.h  mainwindow.cpp
